Fix edit dock overlap bug

--- a/src/css/base/_media_queries.scss
+++ b/src/css/base/_media_queries.scss
@@ -6,9 +6,9 @@
   }
 }
 
-@media only screen and (min-width: 440px) {
+@media only screen and (min-width: 420px) {
   .collage-btn {
-    margin: 0 13px;
+    margin: 0 9.3px;
   }
 
   .edit-dock {
